--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -38,6 +38,7 @@
 	{% include 'mainapp/includes/modal-regConference.html' %}
 	{% include 'mainapp/includes/modal-newEmployee.html' %}
 	{% include 'mainapp/includes/modal-regCongress.html' %}
+	{% include 'mainapp/includes/modal-newDepartament.html' %}
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
