--- a/mainapp/templates/mainapp/conf.html
+++ b/mainapp/templates/mainapp/conf.html
@@ -17,7 +17,7 @@
 			<h5>Быстрый поиск</h5>
 			<form>
 				<div class="form-row">
-                    <div class="form-group col-sm-4">
+                    <div class="form-group col-md-4">
                         <label for="" class="mb-1">Региональное отделение</label>
                         <select class="form-control form-control-sm">
                             <option selected="">Все</option>
@@ -27,7 +27,7 @@
                             <option>Ленинградская область</option>
                         </select>
                     </div>
-                    <div class="form-group col-sm-2">
+                    <div class="form-group col-sm-6 col-md-4 col-lg-2">
                         <label for="" class="mb-1">Год проведения</label>
                         <select class="form-control form-control-sm">
                             <option selected="">Все</option>
@@ -37,6 +37,14 @@
                             <option>2019</option>
                             <option>2020</option>
                             <option>2021</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-sm-6 col-md-4 col-lg-2">
+                        <label for="" class="mb-1">Статус проведения</label>
+                        <select class="form-control form-control-sm">
+                            <option selected="">Все</option>
+                            <option>запланирована</option>
+                            <option>проведена</option>
                         </select>
                     </div>
                 </div>
@@ -56,17 +64,18 @@
 						<div class="card-top">
 							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
 							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.02.2018</div>
+							<div class="card-img-overlay-right">01.11.2019</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Новые способы сварки</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
+								<div class="card-text text-danger">Запланирована</div>
 								<div class="float-right">
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
@@ -81,17 +90,18 @@
 						<div class="card-top">
 							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
 							<div class="card-img-overlay">Московская область</div>
-							<div class="card-img-overlay-right">01.02.2018</div>
+							<div class="card-img-overlay-right">26.09.2019</div>
 						</div>
 						<div class="card-body">
 							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
+								<div class="card-text text-danger">Запланирована</div>
 								<div class="float-right">
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
@@ -106,17 +116,18 @@
 						<div class="card-top">
 							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
 							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.02.2018</div>
+							<div class="card-img-overlay-right">01.11.2018</div>
 						</div>
 						<div class="card-body">
-							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2018</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
+								<div class="card-text text-success">Проведена</div>
 								<div class="float-right">
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
@@ -131,17 +142,18 @@
 						<div class="card-top">
 							<img class="card-img-top img-fluid" src="{% static 'images/img-mosobl.png' %}" alt="Герб Калужской области">
 							<div class="card-img-overlay">Московская область</div>
-							<div class="card-img-overlay-right">01.02.2018</div>
+							<div class="card-img-overlay-right">26.09.2018</div>
 						</div>
 						<div class="card-body">
-							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2019</h6>
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Московской области 2018</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Разработка методической литературы</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Балашиха, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
+								<div class="card-text text-success">Проведена</div>
 								<div class="float-right">
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
@@ -156,17 +168,18 @@
 						<div class="card-top">
 							<img class="card-img-top img-fluid" src="{% static 'images/img-kaluga.png' %}" alt="Герб Калужской области">
 							<div class="card-img-overlay">Калужская область</div>
-							<div class="card-img-overlay-right">01.02.2018</div>
+							<div class="card-img-overlay-right">01.02.2017</div>
 						</div>
 						<div class="card-body">
-							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2019</h6>
+							<h6 class="card-title mb-3"><i class="fa fa-bookmark mr-2"></i>Конференция РСПС по Калужской области 2017</h6>
 							<h6 class="card-subtitle mb-3 text-muted"><i class="fa fa-bookmark-o mr-2"></i>Актуализация профессиональных стандартов</h6>
 							<p class="card-text mb-2"><i class="fa fa-map-marker mr-2"></i>г. Обнинск, ул. Колхозная, д. 118A</p>
-							<p class="card-text mb-0"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<p class="card-text mb-2"><i class="fa fa-users mr-2"></i>Количество участников:&nbsp;<strong>8</strong></p>
+							<a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a>
 						</div>
 						<div class="card-footer">
 							<div class="d-flex justify-content-between align-items-center">
-								<div class="text-secondary"><a href="#" class="card-link" target="_blank"><i class="fa fa-file-text-o mr-2"></i>Повестка дня</a></div>
+								<div class="card-text text-success">Проведена</div>
 								<div class="float-right">
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в ВКонтакте"><i class="fa fa-vk"></i></a>
 									<a href="#" class="btn btn-outline-secondary btn-xs" role='button' title="Поделиться в Telegram"><i class="fa fa-paper-plane"></i></a>
