--- a/mainapp/templates/mainapp/includes/modal-newEmployee.html
+++ b/mainapp/templates/mainapp/includes/modal-newEmployee.html
@@ -12,12 +12,33 @@
 			</div>
 			<form>
 				<div class="modal-body">
-					<!-- <div class="form-row">
-						<div class="form-group col-sm-4">
-							<label for="" class="col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-							<input type="date" class="form-control form-control-sm" placeholder="" value="">
-						</div>
-					</div> -->
+					<div class="form-group">
+						<label for="" class="form-label-sm">Региональное отделение&nbsp;<span class="text-danger">*</span></label>
+						<!-- Вариант 1: касается ЛК РО и страницы Контакты РО (regional_office_detail) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
+						<select class="form-control form-control-sm" disabled required>
+							<option>-</option>
+						  	<option selected>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select>
+
+						<!-- Вариант 2: касается страниц без привязки к РО (пр. Главная и т.д.) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
+						
+						<!-- <select class="form-control form-control-sm" required>
+							<option>-</option>
+						  	<option>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select> -->
+					</div>
+
+
 					<div class="form-group">
 						<label for="" class="form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
 						<input type="text" class="form-control form-control-sm" required>
@@ -27,11 +48,11 @@
 						<input type="text" class="form-control form-control-sm" required>
 					</div>
 					<div class="form-row">
-						<div class="form-group col">
+						<div class="form-group col-sm">
 							<label for="" class="form-label-sm">Email&nbsp;<span class="text-danger">*</span></label>
-							<input type="text" class="form-control form-control-sm" required>
+							<input type="text" class="form-control form-control-sm" required="">
 						</div>
-						<div class="form-group col">
+						<div class="form-group col-sm">
 							<label for="" class="form-label-sm">Телефон</label>
 							<input type="text" class="form-control form-control-sm">
 						</div>
