--- a/mainapp/templates/mainapp/includes/modal-participantConf.html
+++ b/mainapp/templates/mainapp/includes/modal-participantConf.html
@@ -24,17 +24,19 @@
 						<label for="" class="form-label-sm">Должность&nbsp;<span class="text-danger">*</span></label>
 						<input type="text" class="form-control form-control-sm" required>
 					</div>
-					<div class="form-group">
-						<label for="" class="form-label-sm">Телефон&nbsp;<span class="text-danger">*</span></label>
-						<input type="text" class="form-control form-control-sm" required>
-					</div>
-					<div class="form-group">
-						<label for="" class="form-label-sm">Email&nbsp;<span class="text-danger">*</span></label>
-						<input type="email" class="form-control form-control-sm" required>
+					<div class="form-row">
+						<div class="form-group col-sm">
+							<label for="" class="form-label-sm">Email&nbsp;<span class="text-danger">*</span></label>
+							<input type="text" class="form-control form-control-sm" required="">
+						</div>
+						<div class="form-group col-sm">
+							<label for="" class="form-label-sm">Телефон&nbsp;<span class="text-danger">*</span></label>
+							<input type="text" class="form-control form-control-sm">
+						</div>
 					</div>
 					<div class="form-group form-check">
-						<input type="checkbox" class="form-check-input">
-						<label class="form-check-label" for="">Членство в РСПС</label>
+						<input type="checkbox" class="form-check-input" id="membRsps">
+						<label class="form-check-label" for="membRsps">Членство в РСПС</label>
 					</div>
 				</div>
 				<div class="modal-footer">
