--- a/mainapp/templates/mainapp/account_conf.html
+++ b/mainapp/templates/mainapp/account_conf.html
@@ -64,32 +64,32 @@
 									<h6 class='text-primary mb-4'>Сведения о конференции</h6>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-2">
+										<div class="col-6 col-sm-4 col-lg-3">
 											<input type="date" class="form-control form-control-sm" placeholder="" value="">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="236005, г. Обнинск, ул. Колхозная, д. 118A">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Конференция РСПС по Калужской области 2019">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Развитие сварочного сообщества">
 										</div>
 									</div>
 
 									<div class="form-group row align-items-center">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<div class="input-group input-group-sm">
 												<div class="input-group-prepend">
 													<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
@@ -103,7 +103,7 @@
 									</div>
 									<div id="add_field_area">
 										<div class="form-group row align-items-center" id="add">
-											<div class="col-sm-6 offset-sm-4">
+											<div class="col-sm-8 col-lg-6 offset-sm-4">
 												<div class="input-group input-group-sm">
 													<div class="input-group-prepend">
 														<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
@@ -168,8 +168,8 @@
 
 								<div class="form-group">
 									<div class="form-check">
-										<input class="form-check-input" type="checkbox" id="gridCheck">
-										<label class="form-check-label text-success" for="gridCheck">
+										<input class="form-check-input" type="checkbox" id="gridCheck1">
+										<label class="form-check-label text-success" for="gridCheck1">
 											<strong>Конференция проведена</strong>
 										</label>
 									</div>
@@ -200,31 +200,31 @@
 									<h6 class='text-primary mb-4'>Сведения о конференции</h6>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-2">
+										<div class="col-6 col-sm-4 col-lg-3">
 											<input type="date" class="form-control form-control-sm" placeholder="" value="15.10.2019" disabled>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="236005, г. Обнинск, ул. Колхозная, д. 118A" disabled>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Конференция РСПС по Калужской области 2019" disabled>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Развитие сварочного сообщества" disabled>
 										</div>
 									</div>
 									<div class="form-group row align-items-center">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<div class="input-group input-group-sm">
 												<div class="input-group-prepend">
 													<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
@@ -235,7 +235,7 @@
 									</div>
 									<div id="add_field_area">
 										<div class="form-group row align-items-center" id="add">
-											<div class="col-sm-6 offset-sm-4">
+											<div class="col-sm-8 col-lg-6 offset-sm-4">
 												<div class="input-group input-group-sm">
 													<div class="input-group-prepend">
 														<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
@@ -282,8 +282,8 @@
 
 								<div class="form-group">
 									<div class="form-check">
-										<input class="form-check-input" type="checkbox" id="gridCheck" checked disabled>
-										<label class="form-check-label" for="gridCheck">
+										<input class="form-check-input" type="checkbox" id="gridCheck2" checked disabled>
+										<label class="form-check-label" for="gridCheck2">
 											Конференция проведена
 										</label>
 									</div>
