--- a/mainapp/templates/mainapp/account_employee.html
+++ b/mainapp/templates/mainapp/account_employee.html
@@ -33,11 +33,11 @@
 			<h5>Быстрый поиск</h5>
 			<form>
 				<div class="form-row">
-					<div class="form-group col-sm-4">
+					<div class="form-group col-md-6 col-lg-4">
 						<label for="" class="mb-1">ФИО / Место работы / Должность</label>
 						<input type="text" class="form-control form-control-sm">
 					</div>
-					<div class="form-group col-sm-2">
+					<div class="form-group col-sm-2 col-sm-6 col-md-3 col-lg-2">
 						<label for="" class="mb-1">Населенный пункт</label>
 						<select class="form-control form-control-sm">
 							<option selected="">Все</option>
@@ -48,7 +48,7 @@
 							<option>Ермолино</option>
 						</select>
 					</div>
-					<div class="form-group col-sm-2">
+					<div class="form-group col-sm-6 col-md-3 col-lg-2">
 						<label for="" class="mb-1">Статус членства</label>
 						<select class="form-control form-control-sm">
 							<option selected="">Все</option>
@@ -111,47 +111,47 @@
 									<h6 class='text-primary mb-4'>Сведения о члене РСПС</h6>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Комбаров Валентин Анатольевич">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Москва">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Email&nbsp;<span class="text-danger">*</span> / Телефон</label>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="dev1@naks.ru">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="Email" value="dev1@naks.ru">
 										</div>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="+7 (499) 784-72-86">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="№ телефона" value="+7 (499) 784-72-86">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место работы</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value='ООО "НЭДК'>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Должность</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="инженер-программист">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Краткая информация о члене РСПС<br><small>(область деятельности, достижения и прочее...)</small></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<textarea class="form-control form-control-sm" rows="3"></textarea>
 										</div>
 									</div>
 								</div>
 
 								<h6 class='text-primary mb-3'>Статус членства в РСПС</h6>
-
+								
 								<div class="progress mb-5">
 									<div class="progress-bar progress-bar-striped bg-info w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Заявлен</div>
 									<div class="progress-bar bg-default text-secondary w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Одобрен РСПС</div>
@@ -213,40 +213,40 @@
 									<h6 class='text-primary mb-4'>Сведения о члене РСПС</h6>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Комбаров Валентин Анатольевич">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Москва">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Email&nbsp;<span class="text-danger">*</span> / Телефон</label>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="dev1@naks.ru">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="Email" value="dev1@naks.ru">
 										</div>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="+7 (499) 784-72-86">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="№ телефона" value="+7 (499) 784-72-86">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место работы</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value='ООО "НЭДК'>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Должность</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="инженер-программист">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Краткая информация о члене РСПС<br><small>(область деятельности, достижения и прочее...)</small></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<textarea class="form-control form-control-sm" rows="3"></textarea>
 										</div>
 									</div>
@@ -315,40 +315,40 @@
 									<h6 class='text-primary mb-4'>Сведения о члене РСПС</h6>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Комбаров Валентин Анатольевич">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="Москва">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Email&nbsp;<span class="text-danger">*</span> / Телефон</label>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="dev1@naks.ru">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="Email" value="dev1@naks.ru">
 										</div>
-										<div class="col-sm-3">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="+7 (499) 784-72-86">
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="№ телефона" value="+7 (499) 784-72-86">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место работы</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value='ООО "НЭДК'>
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Должность</label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<input type="text" class="form-control form-control-sm" placeholder="" value="инженер-программист">
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Краткая информация о члене РСПС<br><small>(область деятельности, достижения и прочее...)</small></label>
-										<div class="col-sm-6">
+										<div class="col-sm-8 col-lg-6">
 											<textarea class="form-control form-control-sm" rows="3"></textarea>
 										</div>
 									</div>
