--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -15,7 +15,7 @@
 								<a class="nav-link" href="{% url 'index' %}">Главная <span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'about' %}">О РСПС</a>
+								<a class="nav-link" href="{% url 'about' %}">О&nbsp;РСПС</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'news' %}">Новости</a>
@@ -24,7 +24,10 @@
 								<a class="nav-link" href="{% url 'docs' %}">Документы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'regional_office' %}">Региональные отделения</a>
+								<a class="nav-link" href="{% url 'regional_office' %}">Региональные&nbsp;отделения</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'reestr' %}">Реестр&nbsp;РСПС</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'conf' %}">Конференции</a>
@@ -48,7 +51,7 @@
 						<!-- === АВТОРИЗАЦИЯ - вариант по умолчанию === -->
 						<ul class="navbar-nav">
 							<li class="nav-item nav-item-user">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#authorizationModal"><i class="fa fa-sign-in mr-2"></i>Личный кабинет</a>
+								<a class="nav-link" href="#" data-toggle="modal" data-target="#authorizationModal"><i class="fa fa-sign-in mr-2 d-md-none d-xl-inline-block"></i>Личный&nbsp;кабинет</a>
 							</li>
 						</ul>
 						<!-- === КОНЕЦ === -->
