--- a/mainapp/templates/mainapp/includes/modal-regCongress.html
+++ b/mainapp/templates/mainapp/includes/modal-regCongress.html
@@ -12,82 +12,50 @@
 			<form>
 				<div class="modal-body">
 					<div class="alert alert-danger" role="alert">
-						<strong>Внимание!!!</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, omnis.
+						<strong>Внимание!!!</strong>&nbsp;Для регистрации на съезд РСПС человека, отсутствующего в списке, необходимо вначале заявить его в члены РСПС.
 					</div>
 
 					<table class="table table-striped table-hover">
 						<tbody>
 							<tr>
-								<th scope="row" colspan="3">
+								<th scope="row" colspan="2">
 									<div class="form-check">
-						<input type="checkbox" class="form-check-input select-all" id="selectAll">
-						<label class="form-check-label" for="selectAll">выбрать всех</label>
-					</div>
+										<input type="checkbox" class="form-check-input select-all" id="selectAll1">
+										<label class="form-check-label" for="selectAll1">выбрать всех</label>
+									</div>
 								</th>
 							</tr>
 							<tr>
-								<th scope="row">
+								<td scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
+										<input type="checkbox" class="form-check-input select-one" id="selectOne2">
+										<label class="form-check-label" for="selectOne2">Комбаров Валентин Анатольевич</label>
 									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
+								</td>
 								<td>Москва</td>
 							</tr>
 							<tr>
-								<th scope="row">
+								<td scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
+										<input type="checkbox" class="form-check-input select-one" id="selectOne3">
+										<label class="form-check-label" for="selectOne3">Комбаров Валентин Анатольевич</label>
 									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
+								</td>
 								<td>Москва</td>
 							</tr>
 							<tr>
-								<th scope="row">
+								<td scope="row">
 									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
+										<input type="checkbox" class="form-check-input select-one" id="selectOne4">
+										<label class="form-check-label" for="selectOne4">Комбаров Валентин Анатольевич</label>
 									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
-								<td>Москва</td>
-							</tr>
-							<tr>
-								<th scope="row">
-									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
-									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
-								<td>Москва</td>
-							</tr>
-							<tr>
-								<th scope="row">
-									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
-									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
-								<td>Москва</td>
-							</tr>
-							<tr>
-								<th scope="row">
-									<div class="form-check">
-										<input class="form-check-input position-static select-one" type="checkbox" value="" data-id='congressMan'>
-									</div>
-								</th>
-								<td>Комбаров Валентин Анатольевич</td>
+								</td>
 								<td>Москва</td>
 							</tr>
 						</tbody>
 					</table>
-					<!-- <div class="form-group form-check">
-						<input type="checkbox" class="form-check-input" id="selectAll">
-						<label class="form-check-label" for="selectAll">выбрать всех</label>
-					</div> -->
 				</div>
 
-				
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-primary btn-sm">Сохранить</button>
 					<button type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
