--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -3,6 +3,9 @@
 {% block content %}
 	<!-- Content -->
 	<main class="pt-4">
+		<div class="img-head">
+			<img src="/static/images/vnutri-orsps.jpg" alt="">
+		</div>	
 		<div class="container">
 			<h2>О РСПС</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
