--- a/mainapp/templates/mainapp/reestr.html
+++ b/mainapp/templates/mainapp/reestr.html
@@ -1,5 +1,4 @@
 {% extends 'mainapp/base.html' %}
-
 {% block content %}
 <!-- Content -->
 <main class="pt-4">
@@ -175,6 +174,9 @@
 				</li>
 			</ul>
 		</nav>
+	</div>
+	<div class="py-5 mb-4 bg-red">
+		<button type="button" class="btn btn-danger btn-xl" data-toggle="modal" data-target="#modal-newEmployee">Стать членом сообщества</button>
 	</div>
 </main> 
 <!-- End Content -->
