--- a/mainapp/templates/mainapp/regional_office_detail.html
+++ b/mainapp/templates/mainapp/regional_office_detail.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <!-- Content -->
-<!-- dsvdvdsvffs -->
 <main class="pt-4">
 	<div class="container">
 		<nav aria-label="breadcrumb">
@@ -13,46 +12,38 @@
 			</ol>
 		</nav>
 
-		<h4 class="title-page">Контакты регионального отделения</h4>
+		<h4 class="title-page">Контакты регионального отделения<br><small class="text-muted">Астраханская область</small></h4>
+
 	</div>
 
 	<div class="map pb-1 mb-4" id="mapRegion">
 		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59068a2aec599036f416a9544c76f627f23d439f166fccde94df8f4637c6af72&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true;"></script>
 	</div>
 
-		<div class="contacts-ro pt-4 pb-3">
-			<div class="container">
-				<div class="table-responsive">
-					<table class="table table-striped table-sm bg-light">
-						<tr>
-							<td class="text-white bg-danger pl-lg-5">Руководитель<i class="fa fa-caret-right fa-4x text-danger text-right"></i></td>
-							<td class="pl-lg-5">Меркулов Денис Иювинальевич</td>
-						</tr>
-						<tr>
-							<td class="pl-lg-5">Адрес подразделения<i class="fa fa-caret-right fa-3x text-right"></i></td>
-							<td class="pl-lg-5">414056, г. Астрахань, ул. Татищева 20а</td>
-						</tr>
-						<tr>
-							<td class="pl-lg-5">Телефоны<i class="fa fa-caret-right fa-3x text-right"></i></td>
-							<td class="pl-lg-5">(8512) 549097 (8512) 485393</td>
-						</tr>
-						<tr>
-							<td class="pl-lg-5">E-mail<i class="fa fa-caret-right fa-3x text-right"></i></td>
-							<td class="pl-lg-5"><a href="mailto:svarkacenter@ya.ru" class="text-primary">svarkacenter@ya.ru</a></td>
-						</tr>
-					</table>
-				</div>
-				<!-- <div class="adress">
-					<div><span class="rukk">Руководитель<li:after></li:after></span><div class="namee">Меркулов Денис Иювинальевич</div></div>
-					<div><span class="ruk">Адрес подразделения</span><div class="namee">414056, г. Астрахань, ул. Татищева 20а</div></div>
-					<div><span class="ruk">Телефоны</span><div class="namee">(8512) 549097 (8512) 485393</div></div>
-					<div><span class="ruk">E-mail</span><div class="namee"><a href="mailto:svarkacenter@ya.ru">svarkacenter@ya.ru</a></div></div>
-				</div>
-
-				<br class="clear">  -->
-
+	<div class="contacts-ro pt-4 pb-3">
+		<div class="container">
+			<div class="table-responsive">
+				<table class="table table-striped table-sm bg-light">
+					<tr>
+						<td class="text-white bg-danger pl-sm-3 pl-lg-5">Руководитель</td>
+						<td class="pl-sm-3 pl-lg-5">Меркулов Денис Иювинальевич</td>
+					</tr>
+					<tr>
+						<td class="pl-sm-3 pl-lg-5">Адрес подразделения</td>
+						<td class="pl-sm-3 pl-lg-5">414056, г. Астрахань, ул. Татищева 20а</td>
+					</tr>
+					<tr>
+						<td class="pl-sm-3 pl-lg-5">Телефоны</td>
+						<td class="pl-sm-3 pl-lg-5">(8512) 549097 (8512) 485393</td>
+					</tr>
+					<tr>
+						<td class="pl-sm-3 pl-lg-5">E-mail</td>
+						<td class="pl-sm-3 pl-lg-5"><a href="mailto:svarkacenter@ya.ru" class="text-primary">svarkacenter@ya.ru</a></td>
+					</tr>
+				</table>
 			</div>
 		</div>
+	</div>
 
 	<div class="py-5 mb-4 bg-red">
 		<button type="button" class="btn btn-danger btn-xl" data-toggle="modal" data-target="#modal-newEmployee">Стать членом сообщества</button>
