--- a/mainapp/templates/mainapp/account_employee.html
+++ b/mainapp/templates/mainapp/account_employee.html
@@ -52,6 +52,7 @@
 						<label for="" class="mb-1">Статус членства</label>
 						<select class="form-control form-control-sm">
 							<option selected="">Все</option>
+							<option>новый</option>
 							<option>заявлен</option>
 							<option>одобрен</option>
 							<option>имеет сертификат </option>
@@ -82,6 +83,104 @@
 					</tr>
 				</thead>
 				<tbody>
+					<tr>
+						<td>
+							<div class="mb-1">Комбаров Валентин Анатольевич</div>
+							<div class="mb-1">ООО "НЭДК"</div>
+							<div>инженер-программист</div>
+						</td>
+						<td>
+							<div class="mb-1">Москва</div>
+							<div class="mb-1">dev1@naks.ru</div>
+							<div>+7 (499) 784-72-86</div>
+						</td>
+						<td>
+							<div class="status-false mb-1"><i class="fa fa-arrow-down mr-2"></i><small>Новый</small></div>
+						</td>
+						<td>
+							<a href="#" class="btn-action mr-3 text-primary" title="Удалить"><i class="fa fa-trash-o"></i></a>
+							<a href="#multiCollapseEmpl00" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
+						</td>
+					</tr>
+					<tr class="multi-collapse collapse edit-list" id="multiCollapseEmpl00">
+						<td colspan="4" class="total-column">
+							<form>
+								<div class="mb-4">
+									<h6 class='text-primary mb-4'>Сведения о члене РСПС</h6>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">ФИО&nbsp;<span class="text-danger">*</span></label>
+										<div class="col-sm-8 col-lg-6">
+											<input type="text" class="form-control form-control-sm" placeholder="" value="Комбаров Валентин Анатольевич">
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Город проживания (населенный пункт)&nbsp;<span class="text-danger">*</span></label>
+										<div class="col-sm-8 col-lg-6">
+											<input type="text" class="form-control form-control-sm" placeholder="" value="Москва">
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Email&nbsp;<span class="text-danger">*</span> / Телефон</label>
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="Email" value="dev1@naks.ru">
+										</div>
+										<div class="col-6 col-sm-4 col-lg-3">
+											<input type="text" class="form-control form-control-sm" placeholder="№ телефона" value="+7 (499) 784-72-86">
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место работы</label>
+										<div class="col-sm-8 col-lg-6">
+											<input type="text" class="form-control form-control-sm" placeholder="" value='ООО "НЭДК'>
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Должность</label>
+										<div class="col-sm-8 col-lg-6">
+											<input type="text" class="form-control form-control-sm" placeholder="" value="инженер-программист">
+										</div>
+									</div>
+									<div class="form-group row">
+										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Краткая информация о члене РСПС<br><small>(область деятельности, достижения и прочее...)</small></label>
+										<div class="col-sm-8 col-lg-6">
+											<textarea class="form-control form-control-sm" rows="3"></textarea>
+										</div>
+									</div>
+								</div>
+
+								<h6 class='text-primary mb-3'>Статус членства в РСПС</h6>
+								
+								<div class="progress mb-5">
+									<div class="progress-bar bg-default text-secondary w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Заявлен</div>
+									<div class="progress-bar bg-default text-secondary w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Одобрен РСПС</div>
+									<div class="progress-bar bg-default text-secondary w-25" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Сертификат РСПС</div>
+								</div>
+
+								<div class="form-group">
+									<div class="form-check">
+										<input class="form-check-input" type="checkbox" id="gridCheck0">
+										<label class="form-check-label text-success text-uppercase" for="gridCheck0">
+											<strong>Зарегистрировать на Съезд РСПС 2019</strong>
+										</label>
+									</div>
+								</div>
+								<div class="form-row align-items-center">
+									<div class="col-auto mr-auto">
+										<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
+										<a href="#multiCollapseEmpl01" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
+									</div>
+									<div class="col-auto my-1">
+										<div class="form-check">
+											<input class="form-check-input" type="checkbox" id="mailingCheck0">
+											<label class="form-check-label" for="mailingCheck0">
+												подписка на рассылку от РСПС
+											</label>
+										</div>
+									</div>
+								</div>
+							</form>
+						</td>
+					</tr>
 					<tr>
 						<td>
 							<div class="mb-1">Комбаров Валентин Анатольевич</div>
