--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,6 +165,9 @@ main {
     color: #00467f;
     margin-bottom: 1.5rem;
     font-weight: bold; }
+  main .img-head {
+    background: url(../images/vnutri-orsps.jpg) 100% 100% no-repeat;
+    background-size: contain; }
   main .nav-tabs .nav-link {
     border-radius: 0;
     color: #086da3; }
@@ -326,12 +329,12 @@ main {
       border-top: 2px solid #fff;
       font-size: 0.8rem; }
       main .contacts-ro .table-sm tr td:first-child {
-        position: relative;
         text-transform: uppercase;
         background-color: #e1ecf2; }
-        main .contacts-ro .table-sm tr td:first-child i {
-          position: absolute;
-          right: -15px;
-          top: 50%;
-          -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%); }
+  main .about-ro .table-sm tr td {
+    vertical-align: middle;
+    border-top: 2px solid #fff;
+    font-size: 0.8rem; }
+    main .about-ro .table-sm tr td:first-child {
+      text-transform: uppercase;
+      background-color: #e1ecf2; }
